tests/paczka1/small_fuzzy/45903234.err
Error in line 7: fkMKC88 S847 31,0
Error in line 9: fkMKC88 S626 93,6
